--- a/_posts/2020-06-05-smug.md
+++ b/_posts/2020-06-05-smug.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 播客节目《得意忘形》
-category: life
+title: 《得意忘形》
+category: 播客
 ---
 
 《得意忘形》这个播客是我最近听《TeaHour》的[一期节目](https://teahour.fm/94)得知的。其中一个嘉宾提到听这个播客能收获很多对人生的思考。随后我在网上搜到了[一篇文章](https://medium.com/@iwannasay/b1bd7174fe12)也推荐了这个播客。摘录文章中对这个播客的描述是：
