--- a/_posts/2020-06-05-smug.md
+++ b/_posts/2020-06-05-smug.md
@@ -145,6 +145,21 @@ category: 播客
 1. 法国的鲍德里亚的书：正如中世纪是通过上帝和魔鬼来建立平衡一样，我们正在用消费和对消费的揭示建立一种平衡，消费已经成为一种新的神和神话。
 
 
+#### 第60期 感受与生命合一中的爱的扩张
+1. 当住进一个酒店时、面对困难时，都对“它”说谢谢你我爱你
+1. 学霸猫提倡不要有过山车般的情感体验，那是不是意味着无欲无求呢？并不是，不过我们可以在需要面对挑战的时候，你可以对这个挑战说谢谢你我爱你。
+1. 播主提到一个问题: 那人是不是应该就不去追求什么了吗，比如我十七岁，很想在网球上有自己的成就。学霸猫说在照顾好自己身心的前提下去努力，去争取。人生除了照顾好自己，无事可做。
+1. 小孩子灵力都很强，知道吃冰淇淋比做作业重要，长大了就变弱了。
+1. 什么是观者？每个人的人生都是由未知的东西推进的，而不是自己推进的。从观者的角度看，比如照镜子时你不满意镜子里的相貌；比如你认为对方不够爱你，其实是折射出你需要关注一下你自己的身心；比如渣男，因为他的心碎成渣了，所以才会做出反常的行为。
+1. 
+体会到爱的扩张，人应该是处处充满了奇迹的，如果你感受不到奇迹，那可能是你在阻止你内心去感受奇迹。上帝给予的是丰富多彩的人生，如果只是想更多的钱、让某某爱我，那就太平面了。
+1. 
+假设你生病了，如果你越是在乎这个病，这个病就好不了，而如果你接纳它，那么它自然而然就会“消失”。
+1. 书籍: 零极限；当下的力量；你值得过更好的生活；奇迹课程。
+1. 
+PS：小孩子选择吃冰淇淋而大人做不到是因为大人有理智，比如不会为了睡懒觉而耽误比赛时间。然而经常奔波于各种比赛会疏于照顾自己的身心，大人需要在这里找到一个平衡，否则就连小孩子都不如了。
+
+
 
 
 
