--- a/_posts/2020-06-05-smug.md
+++ b/_posts/2020-06-05-smug.md
@@ -145,7 +145,7 @@ category: 播客
 1. 法国的鲍德里亚的书：正如中世纪是通过上帝和魔鬼来建立平衡一样，我们正在用消费和对消费的揭示建立一种平衡，消费已经成为一种新的神和神话。
 
 
-#### 第60期 感受与生命合一中的爱的扩张
+#### 第60期，感受与生命合一中的爱的扩张
 1. 当住进一个酒店时、面对困难时，都对“它”说谢谢你我爱你
 1. 学霸猫提倡不要有过山车般的情感体验，那是不是意味着无欲无求呢？并不是，不过我们可以在需要面对挑战的时候，你可以对这个挑战说谢谢你我爱你。
 1. 播主提到一个问题: 那人是不是应该就不去追求什么了吗，比如我十七岁，很想在网球上有自己的成就。学霸猫说在照顾好自己身心的前提下去努力，去争取。人生除了照顾好自己，无事可做。
