--- a/_posts/2023-09-25-han-xin.md
+++ b/_posts/2023-09-25-han-xin.md
@@ -10,7 +10,7 @@ category: 随笔
 信谢曰：“臣得事项王数年，官不过郎中，位不过执戟，言不听，画策不用，故背楚归汉。汉王授我上将军印、数万之众，解衣衣我，推食食我，言听计用，吾得至于此。夫人深亲信我，背之不祥。幸为信谢项王。”武涉已去，蒯通知天下权在于信，深说以三分天下，鼎足而王。语在《通传》。信不忍背汉，又自以功大，汉王不夺我齐，遂不听。
 </blockquote>
 
-这是楚汉之争正胶着的时候，韩信一路攻城略地，已经拿下了齐国，项羽派说客拉拢韩信，韩信谢绝了。“优”是优柔寡断的意思，“不敏”是政治嗅觉不敏感。楚汉之争结束，韩信先被降为楚王，随后又以叛国罪贬为淮阴侯，最后被吕后处死。宋老师说他这样的结局是有计划的实施的，刘邦早就把他视作心腹大患。作为汉初三杰之一，他的下场不得不令人叹息。而他曾经是有的选择的，韩信的门客蒯通也曾力劝他自立为王，三分天下。宋老师说蒯通的劝词有理有据，分析也很透彻。引用蒯通的劝词如下：
+这是楚汉之争正胶着的时候，韩信一路攻城略地，已经拿下了齐国，项羽派说客拉拢韩信，韩信谢绝了。“优”是优柔寡断的意思，“不敏”是政治嗅觉不敏感。楚汉之争结束，韩信先被降为楚王，随后又以叛国罪贬为淮阴侯，最后被吕后处死。宋老师说他这样的结局是有计划的实施的，刘邦早就把他视作心腹大患。作为汉初三杰之一，他的下场不得不令人叹息。而他曾经是有的选择的，韩信的门客蒯通力劝他自立为王，三分天下。宋老师说蒯通的谏言有理有据，分析也很透彻。引用蒯通的谏言如下：
 
 <blockquote>
 “当今之时，两主县命足下。足下为汉则汉胜。与楚则楚胜。臣愿披心腹，堕肝胆，效愚忠，恐足下不能用也。方今为足下计，莫若两利而俱存之，参分天下，鼎足而立，其势莫敢先动。夫以足下之贤圣，有甲兵之众，据强齐，从燕、赵，出空虚之地以制其后，因民之欲，西乡为百姓请命，天下孰敢不听！足下按齐国之故，有淮、泗之地，怀诸侯以德，深拱揖让，则天下君王相率而朝齐矣。盖闻‘天与弗取，反受其咎；时至弗行，反受其殃’。愿足下孰图之。”
