--- a/_posts/2020-06-05-smug.md
+++ b/_posts/2020-06-05-smug.md
@@ -144,6 +144,13 @@ category: 播客
 1. 什么是消费主义：高于个体的一种群体的规则，甚至是某种情绪、舆论、信仰。买东西是个人的事，但是当你进入一个公共空间，他人如何看待我，在社交网络是什么形象，我是否要对某些事情表态的时候，它就和消费主义挂钩了。
 1. 法国的鲍德里亚的书：正如中世纪是通过上帝和魔鬼来建立平衡一样，我们正在用消费和对消费的揭示建立一种平衡，消费已经成为一种新的神和神话。
 
+#### 第14期，心理学是一种高杠杆率的礼物
+1. 内心强大是不好鉴定的，不同的人会有不同的定义；人在不同的时间内心不一样；面对不同的事情内心不一样
+1. 移除成长的障碍经常用在存在主义和心理治疗上。人就像树一样，有生长的能力，移除心理障碍就像移除树上的石头一样
+1. 情绪就是成长的障碍，而出现心理问题是因为他会逃避这些情绪，而心理咨询就是需要有人去陪伴他面对这些情绪。
+1. 人的成长就是和世界整合的过程，开始是和妈妈，然后是家庭、家族、然后是社会等等，而出现心理问题是他和外界的整合出现阻断
+1. 美国心理咨询行业被保险行业绑架，保险公司要求心理治疗师在七个疗程就有成效，导致出现了很多短程心理治疗的机构
+1. 人第一次去美国很容易描述美国是什么样的，而待长了反而不好描述了，心理治疗也是一样。
 
 #### 第60期，感受与生命合一中的爱的扩张
 1. 当住进一个酒店时、面对困难时，都对“它”说谢谢你我爱你
@@ -151,13 +158,10 @@ category: 播客
 1. 播主提到一个问题: 那人是不是应该就不去追求什么了吗，比如我十七岁，很想在网球上有自己的成就。学霸猫说在照顾好自己身心的前提下去努力，去争取。人生除了照顾好自己，无事可做。
 1. 小孩子灵力都很强，知道吃冰淇淋比做作业重要，长大了就变弱了。
 1. 什么是观者？每个人的人生都是由未知的东西推进的，而不是自己推进的。从观者的角度看，比如照镜子时你不满意镜子里的相貌；比如你认为对方不够爱你，其实是折射出你需要关注一下你自己的身心；比如渣男，因为他的心碎成渣了，所以才会做出反常的行为。
-1. 
-体会到爱的扩张，人应该是处处充满了奇迹的，如果你感受不到奇迹，那可能是你在阻止你内心去感受奇迹。上帝给予的是丰富多彩的人生，如果只是想更多的钱、让某某爱我，那就太平面了。
-1. 
-假设你生病了，如果你越是在乎这个病，这个病就好不了，而如果你接纳它，那么它自然而然就会“消失”。
+1. 体会到爱的扩张，人应该是处处充满了奇迹的，如果你感受不到奇迹，那可能是你在阻止你内心去感受奇迹。上帝给予的是丰富多彩的人生，如果只是想更多的钱、让某某爱我，那就太平面了。
+1. 假设你生病了，如果你越是在乎这个病，这个病就好不了，而如果你接纳它，那么它自然而然就会“消失”。
 1. 书籍: 零极限；当下的力量；你值得过更好的生活；奇迹课程。
-1. 
-PS：小孩子选择吃冰淇淋而大人做不到是因为大人有理智，比如不会为了睡懒觉而耽误比赛时间。然而经常奔波于各种比赛会疏于照顾自己的身心，大人需要在这里找到一个平衡，否则就连小孩子都不如了。
+1. PS：小孩子选择吃冰淇淋而大人做不到是因为大人有理智，比如不会为了睡懒觉而耽误比赛时间。然而经常奔波于各种比赛会疏于照顾自己的身心，大人需要在这里找到一个平衡，否则就连小孩子都不如了。
 
 
 
