--- a/_posts/2020-06-05-smug.md
+++ b/_posts/2020-06-05-smug.md
@@ -152,6 +152,13 @@ category: 播客
 1. 美国心理咨询行业被保险行业绑架，保险公司要求心理治疗师在七个疗程就有成效，导致出现了很多短程心理治疗的机构
 1. 人第一次去美国很容易描述美国是什么样的，而待长了反而不好描述了，心理治疗也是一样。
 
+#### 第16期，闲谈社会学、人的优越感与埃利亚斯
+* 对于自己的拖延症，如果你问why(为什么会有拖延症)，那么就会陷入到找原因的漩涡；如果你问how(怎么有拖延症的)，就会顺着线索去找到答案。
+* 埃利亚斯对工厂的工人生活区做调研，发现2区(居住比较久)的工人比3区(新建的)的犯罪率低，原因是熟悉的生活方式给了2区优越感。
+* 应试教育和素质教育，素质教育更像是上层社会提出来的，因为穷人没有金钱和时间去搞素质教育，从而富人可以在素质教育中取得优势。
+* 我们会用手去抓面包，但不会用手去抓蛋糕。因为抓蛋糕后手是黏糊糊的，如果和人握手会有一种不礼貌的羞耻感。文明是通过这种羞耻感建立的，压抑的是人的本能。
+* 文明的进程就是你会受到社会给你的压力、圈子给你的压力。人都是被他人的意见和眼光所驯化的。
+
 #### 第60期，感受与生命合一中的爱的扩张
 1. 当住进一个酒店时、面对困难时，都对“它”说谢谢你我爱你
 1. 学霸猫提倡不要有过山车般的情感体验，那是不是意味着无欲无求呢？并不是，不过我们可以在需要面对挑战的时候，你可以对这个挑战说谢谢你我爱你。
