--- a/_posts/2020-06-05-smug.md
+++ b/_posts/2020-06-05-smug.md
@@ -159,6 +159,11 @@ category: 播客
 * 我们会用手去抓面包，但不会用手去抓蛋糕。因为抓蛋糕后手是黏糊糊的，如果和人握手会有一种不礼貌的羞耻感。文明是通过这种羞耻感建立的，压抑的是人的本能。
 * 文明的进程就是你会受到社会给你的压力、圈子给你的压力。人都是被他人的意见和眼光所驯化的。
 
+#### 第17期，创作很苦，做新东西很难
+* 这一期主要和何峰闲聊：我们很难达到前人已经有的了高度，做出超凡脱俗的成就。
+* 播客开始的时候介绍了[《G.E.B》](https://www.zhihu.com/question/620133435)，书的作者称是一本科普读物，实际上阅读难度很大。
+* 博主感概只有努力过才知道天赋有多重要，何峰随即介绍了一个法国天才数学家，群论的创立者，出世时才19岁。
+
 #### 第60期，感受与生命合一中的爱的扩张
 1. 当住进一个酒店时、面对困难时，都对“它”说谢谢你我爱你
 1. 学霸猫提倡不要有过山车般的情感体验，那是不是意味着无欲无求呢？并不是，不过我们可以在需要面对挑战的时候，你可以对这个挑战说谢谢你我爱你。
