--- a/_posts/2023-09-25-han-xin.md
+++ b/_posts/2023-09-25-han-xin.md
@@ -17,7 +17,7 @@ category: 随笔
 </blockquote>
 
 <blockquote>
-信曰：“汉遇我厚，吾岂可见利而背恩乎！”通曰：“始常山王、成安君故相与为刎颈之交，及争张黡、陈释之事，常山王奉头鼠窜，以归汉王。借兵东下，战于鄗北，成安君死于泜水之南，头足异处。此二人相与，天下之至驩也，而卒相灭亡者，何也？患生于多欲而人心难测也。今足下行忠信以交于汉王，必不能固于二君之相与也，而事多大于张黡、陈释之事者，故臣以为足下必汉王之不危足下，过矣。大夫种存亡越，伯句践，立功名而身死。语曰：‘野禽殚，走犬亨；敌国破，谋臣亡。’故以交友言之，则不过张王与成安君；以忠臣言之，则不过大夫种。此二者，宜足以观矣。愿足下深虑之。且臣闻之，勇略震主者身危，功盖天下者不赏。足下涉西河，虏魏王，禽夏说，下井陉，诛成安君之罪，以令于赵，胁燕定齐，南摧楚人之兵数十万众，遂斩龙且，西乡以报，此所谓功无二于天下，略不出出者也。今足下挟不赏之功，戴震主之威，归楚，楚人不信；归汉，汉人震恐。足下欲持是安归乎？夫势在人臣之位，而有高天下之名，切为足下危之。”信曰：“生且休矣，吾将念之。”
+信曰：“汉遇我厚，吾岂可见利而背恩乎！”通曰：“始常山王、成安君故相与为刎颈之交，及争张黡、陈释之事，常山王奉头鼠窜，以归汉王。借兵东下，战于鄗北，成安君死于泜水之南，头足异处。此二人相与，天下之至驩也，而卒相灭亡者，何也？患生于多欲而人心难测也。今足下行忠信以交于汉王，必不能固于二君之相与也，而事多大于张黡、陈释之事者，故臣以为足下必汉王之不危足下，过矣。大夫种存亡越，伯句践，立功名而身死。语曰：‘野禽殚，走犬亨；敌国破，谋臣亡。’故以交友言之，则不过张王与成安君；以忠臣言之，则不过大夫种。此二者，宜足以观矣。愿足下深虑之。且臣闻之，勇略震主者身危，功盖天下者不赏。足下涉西河，虏魏王，禽夏说，下井陉，诛成安君之罪，以令于赵，胁燕定齐，南摧楚人之兵数十万众，遂斩龙且，西乡以报，此所谓功无二于天下，而略不世出者也。今足下挟不赏之功，戴震主之威，归楚，楚人不信；归汉，汉人震恐。足下欲持是安归乎？夫势在人臣之位，而有高天下之名，切为足下危之。”信曰：“生且休矣，吾将念之。”
 </blockquote>
 
 <blockquote>
