--- a/_posts/2023-09-25-han-xin.md
+++ b/_posts/2023-09-25-han-xin.md
@@ -24,6 +24,6 @@ category: 随笔
 通复说曰：“听者，事之候也；计者，存亡之机也。夫随厮养之役者，失万乘之权；守儋石之禄者，阙卿相之位。计诚知之，而决弗敢行者，百事之祸也。故猛虎之犹与，不如蜂虿之致蠚；孟贲之狐疑，不如童子之必至。此言贵能行之也。夫功者，难成而易败；时者，难值而易失。‘时乎时，不再来。’愿足下无疑臣之计。”信犹与不忍背汉，又自以功多，汉不夺我齐，遂谢通。
 </blockquote>
 
-俗话说“最是无情帝王家”，作为后人看来，韩信的“愚忠”是多么的可悲。然而扪心自问如果自己置身其中，又能否走出一条正确的路呢？如今自己已是而立之年，回首过去，几度悲几度喜，也会感概那么几件荒唐可笑的事情。有些事是那么侥幸，当时却认为是理所当然。以前看到老外在祝福某人时说“愿主赐予你智慧”，现在想来那的确是美好的祝福。
+俗话说“最是无情帝王家”，作为后人看来，韩信的“愚忠”是多么的可悲。然而扪心自问如果自己置身其中，又能否走出一条正确的路呢？如今自己已是而立之年，回首过去，几度悲几度喜，也会感概那么几件荒唐可笑的事情。有些事是那么侥幸，当时却认为是理所当然。如何顺应天时，如何遵从内心，是需要大智慧的。以前看到老外在祝福某人时说“愿主赐予你智慧”，现在想来那的确是美好的祝福。
 
 
