--- a/_posts/2024-09-12-yang-zhi.md
+++ b/_posts/2024-09-12-yang-zhi.md
@@ -4,9 +4,9 @@ title: 看水浒，说杨志
 category: 电视剧
 ---
 
-最近正在重温央视版的《水浒传》。我儿时对水浒的印象是该出手的就出手的豪情义气，如今再看发现里面尽是世态炎凉、百样人生。从中可以看到，在北宋奸臣当道、民不聊生的大环境中，不同的人在现实面前是如何抉择的，命运又是如何变化的。再看水浒，对潘金莲又有了新的看法。小时候只觉得她是个荡妇，现在发现她其实和其他人并无区别。她开始的时候也是每天勤操家务，和武大郎相敬如宾。一个是在武大郎这里找不到女人需要的浪漫的潘金莲，一个是风流倜傥懂得情趣的西门庆，加上王干娘的一番撮合下有了奸情。其实人的本性和欲望是差不多的，很多人只是没有她这样的际遇而已，不然他们也可能成为潘金莲。
+最近正在重温央视版的《水浒传》。我儿时对水浒的印象是该出手的就出手的豪情义气，如今再看发现里面尽是世态炎凉、百样人生。从中可以看到，在北宋奸臣当道、民不聊生的大环境中，不同的人在现实面前是如何抉择的，命运又是如何变化的。再看水浒，对潘金莲又有了新的看法。小时候只觉得她是个荡妇，现在发现她其实和其他人并无区别。她开始的时候也是每天勤操家务，和武大郎相敬如宾。然而压抑的欲望碰巧遇到了发泄的突破口。一个是在武大郎这里找不到女人需要的浪漫的潘金莲，一个是风流倜傥懂得情趣的西门庆，加上王干娘的一番撮合下有了奸情。其实人的本性和欲望是差不多的，很多人只是没有她这样的际遇而已，不然人人可以成为潘金莲。
 
-说到杨志，是一个我觉得比林冲更悲情的人物。负责搬运花石纲丢了、卖刀误杀了人、护送生辰纲失窃，作为一个一心想重振家族声望的将门之后，却一再遭遇打击。网上大家都对他分析过，一方面的确是命运不济，一方面和他的性格也有很大的关系。我之所以和他有比较大的共鸣，是觉得从他身上能看到自己的一些影子。
+说到杨志，是一个我觉得比林冲更悲情的人物。负责搬运花石纲丢了、卖刀误杀了人、护送生辰纲被劫，作为一个一心想重振家族声望的将门之后，却一再遭遇打击。网上大家都对他分析过，一方面的确是命运不济，一方面和他的性格也有很大的关系。我之所以和他有比较大的共鸣，是觉得从他身上能看到自己的一些影子。
 
-
+丢了花石纲在电视中只是粗略提过，但大概从生辰纲失窃事件略微领悟一二。护送生辰纲过程中，杨志秉着不能辜负新主的期望，一路尽心尽责，然而却忽略了同行人的感受。途中严格执行自己的计划，旁人抱怨也只是粗略解释，高冷的意气使得他与队伍格格不入。终于在黄泥岗时让团队脱离了他的戒令，喝了劫匪的酒上当，生辰纲因此被劫。这应该就是典型的理工男的作风吧，只顾做正确的事情，殊不知人事人事，除了做事，还要做人。杨志的才能毋庸置疑，只是少了顾及他人的这根经，不适合做领导。
 
