--- a/_posts/2024-09-12-yang-zhi.md
+++ b/_posts/2024-09-12-yang-zhi.md
@@ -8,5 +8,5 @@ category: 电视剧
 
 说到杨志，是一个我觉得比林冲更悲情的人物。负责搬运花石纲丢了、卖刀误杀了人、护送生辰纲被劫，作为一个一心想重振家族声望的将门之后，却一再遭遇打击。网上大家都对他分析过，一方面的确是命运不济，一方面和他的性格也有很大的关系。我之所以和他有比较大的共鸣，是觉得从他身上能看到自己的一些影子。
 
-丢了花石纲在电视中只是粗略提过，但大概从生辰纲失窃事件略微领悟一二。护送生辰纲过程中，杨志秉着不能辜负新主的期望，一路尽心尽责，然而却忽略了同行人的感受。途中严格执行自己的计划，旁人抱怨也只是粗略解释，高冷的意气使得他与队伍格格不入。终于在黄泥岗时让团队脱离了他的戒令，喝了劫匪的酒上当，生辰纲因此被劫。这应该就是典型的理工男的作风吧，只顾做正确的事情，殊不知人事人事，除了做事，还要做人。杨志的才能毋庸置疑，只是少了顾及他人的这根经，不适合做领导。
+丢了花石纲在电视中只是粗略提过，但大概从生辰纲失窃事件略微领悟一二。护送生辰纲过程中，杨志秉着不能辜负新主的期望，一路尽心尽责，然而却忽略了同行人的感受。途中严格执行自己的计划，旁人抱怨也只是粗略解释，高冷的意气使得他与团队格格不入。终于在黄泥岗时让团队脱离了他的戒令，喝了劫匪的酒上当，生辰纲因此被劫。这应该就是典型的理工男的作风吧，只顾做正确的事情，殊不知人事人事，除了做事，还要做人。杨志的才能毋庸置疑，只是少了顾及他人的这根经，不适合做领导。让我想起我在P公司的时候，看到一个同事的代码写的太水，忍不住就当面数落他（是上班时间周围其他同事都听的到），他最后忍不住说：就算你聪明，你不能要求别人和你一样聪明吧。当时我就意识到自己过分了，自己之所以这样做，很大程度也是在秀优越而已。
 
