--- a/_posts/2024-09-12-yang-zhi.md
+++ b/_posts/2024-09-12-yang-zhi.md
@@ -8,5 +8,11 @@ category: 电视剧
 
 说到杨志，是一个我觉得比林冲更悲情的人物。负责搬运花石纲丢了、卖刀误杀了人、护送生辰纲被劫，作为一个一心想重振家族声望的将门之后，却一再遭遇打击。网上大家都对他分析过，一方面的确是命运不济，一方面和他的性格也有很大的关系。我之所以和他有比较大的共鸣，是觉得从他身上能看到自己的一些影子。
 
-丢了花石纲在电视中只是粗略提过，但大概从生辰纲失窃事件略微领悟一二。护送生辰纲过程中，杨志秉着不能辜负新主的期望，一路尽心尽责，然而却忽略了同行人的感受。途中严格执行自己的计划，旁人抱怨也只是粗略解释，高冷的意气使得他与团队格格不入。终于在黄泥岗时让团队脱离了他的戒令，喝了劫匪的酒上当，生辰纲因此被劫。这应该就是典型的理工男的作风吧，只顾做正确的事情，殊不知人事人事，除了做事，还要做人。杨志的才能毋庸置疑，只是少了顾及他人的这根经，不适合做领导。让我想起我在P公司的时候，看到一个同事的代码写的太水，忍不住就当面数落他（是上班时间周围其他同事都听的到），他最后忍不住说：就算你聪明，你不能要求别人和你一样聪明吧。当时我就意识到自己过分了，自己之所以这样做，很大程度也是在秀优越而已，而且这份优越可能还只是自以为的优越。
+丢了花石纲在电视中只是粗略提过，但大概从生辰纲失窃事件略微领悟一二。护送生辰纲过程中，杨志秉着不能辜负新主的期望，一路尽心尽责，然而却忽略了同行人的感受。途中严格执行自己的计划，旁人抱怨也只是粗略解释，高冷的意气使得他与团队格格不入。终于在黄泥岗时让团队脱离了他的戒令，喝了劫匪的酒上当，生辰纲因此被劫。这应该就是典型的理工男的作风吧，只顾做正确的事情，殊不知人事人事，除了做事，还要做人。杨志的才能毋庸置疑，只是少了顾及他人的这根经，不适合做领导。让我想起我在P公司的时候，看到一个同事的代码写的太差劲，忍不住就当面数落他（是上班时间周围其他同事都听的到），他最后忍不住说：就算你聪明，你不能要求别人和你一样聪明吧。当时我就意识到自己过分了，自己之所以这样做，很大程度也是在秀优越而已，而且这份优越可能还只是自以为的优越。陷于执的人就容易沉浸在自我的世界中，当时的我总是有一种不满于现状，屈才，自命不凡的劲头。而杨志的执大概就是他身为三代将门之后，有着重振祖上家风的抱负吧。虽然他自视孤傲，仿佛有道德洁癖一般，也并不是不食人间烟火的。在丢了花石纲后，他为了逃避罪责，也是散尽家财上下打点，又讨好高太尉。可见在绝对的权势面前，他也是可以低头放弃自己的原则的。
+
+卖刀误杀人又看到了杨志优柔寡绝的一面。杨志在落魄没钱的时候，在街上卖刀，遇到了恶霸牛二，牛二为了霸占宝刀百般刁难，最后他忍无可忍一刀杀了牛二。凭杨志的身手，在纠缠的过程中他完全可以随时脱身而去，但是他没有，以至最后杀人惹了官司。当断不断，反受其乱。纠缠期间，杨志自己也发现了对方并非真心买刀，却还在与其纠缠，大概是气不过对方的挑拨，硬要证明自己宝刀货真价实。既然对方非真心买刀，在事态没有升级就应该尽早脱身，为了一时意气或者些许幻想，而让自己持续陷于不利局面太不值当了。或者说还是不太会处理与他人的关系，就像我一样，有时候明明不爽对方，但是既没有明确说出来让对方知道，又没有采取措施避免再次受损，多次积压下又突然爆发，落得一个更坏的下场。
+
+最后推荐一篇写李忠的[文章](https://pureage.info/2016/06/04/friend-lizhong.html)，写的是真好。
+
+
 
