--- a/static/guitar-chord/docs/12.md
+++ b/static/guitar-chord/docs/12.md
@@ -1,3 +1,6 @@
 # 不再犹豫
 
-![layout](images/1.png)
+![layout](images/bzyy1.png)
+![layout](images/bzyy2.png)
+![layout](images/bzyy3.png)
+![layout](images/bzyy4.png)
