--- a/static/guitar-chord/docs/13.md
+++ b/static/guitar-chord/docs/13.md
@@ -1,3 +1,5 @@
 # 那些你很冒险的梦
 
-![layout](images/1.png)
+![layout](images/nxnhmydm1.jpeg)
+![layout](images/nxnhmydm2.jpeg)
+![layout](images/nxnhmydm3.jpeg)
